Fixed overflow issue by adding flex-wrap on container-img-text now the odin text will wrap onto the next line when the screen size gets smaller
Made left section have a width of 40vw
now it takes up 40% of the viewport

Removed clamp() on the p element of the right-section
instead I set a width of 80%, even when I resize
the webpage to be very small this paragraph is still visible

--- a/style.css
+++ b/style.css
@@ -30,7 +30,8 @@ main.container {
 }
 
 .left-section {
-  flex: 1 1 40%;
+  width: 40vw; /*take up 40% of the browser window */
+
   border: 2px solid purple;
   background-image: url("img/bg-img-greenleafplant.avif"),
     linear-gradient(to right, black, rgb(123, 65, 6));
@@ -42,9 +43,10 @@ main.container {
   flex-direction: column;
   justify-content: space-between; /*creates space between the copyright text and the transparent div*/
 }
+
 .container-img-text {
   /*create some space for the logo and the text inside */
-  /*  padding-top: 1.5rem; */
+
   margin-top: 7rem;
 
   width: 100%;
@@ -55,6 +57,7 @@ main.container {
 
   display: flex;
   justify-content: center;
+  flex-wrap: wrap; /*make the  odin text wrap onto next line that way it does'nt overflow. */
 }
 
 .wrapper-img {
@@ -106,7 +109,7 @@ a:hover {
   padding: 5rem 0 5rem 0;
   background-color: whitesmoke;
   width: 60vw; /*when I resize the webpage the p text shrinks,which allows users to see the whole text  */
-  /*  flex: 1 1 auto; */ /*no longer needed because of line above */
+
   display: flex;
   flex-direction: column;
 }
@@ -118,12 +121,7 @@ input {
 }
 .right-section > p {
   border: 2px solid purple;
-  width: clamp(
-    2rem,
-    80%,
-    50vw
-  ); /*never go above 50vw or below 2rem(32px) but aim for 80%, 
-  user can now see the paragraph text a bit better when they shrink the webpage*/
+  width: 80%;
   padding-left: var(--text-padding);
   margin-bottom: 1rem;
   font-size: var(--fs);
